--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -2,11 +2,13 @@
   display: flex;
   flex-flow: row;
   justify-content: space-between;
-  background-color: #ffd700;
+  background-color: #1976d2;
   padding: 10px 0;
 
   a {
-    color: #000;
+    color: #fff;
+    font-size: 15px;
+    text-shadow: 0 0 5px #000;
     text-decoration: none;
     margin: 0 20px;
   }
