--- a/src/app/dashboard/user/user.component.html
+++ b/src/app/dashboard/user/user.component.html
@@ -5,10 +5,9 @@
     <a routerLink="/new">Add new payload</a>
   </div>
   <ul class="tabs head">
-    <li class="active">Total Submitted</li>
-    <li>Pending Finance Review</li>
-    <li>Payables Pending</li>
-    <li>Rejected By Area Manager</li>
+    <li class="active">Drafts</li>
+    <li>Submitted</li>
+    <li>Rejected</li>
   </ul>
 
   <app-loading *ngIf="loading"></app-loading>
