--- a/src/app/dashboard/transaction-details/transaction-details.component.html
+++ b/src/app/dashboard/transaction-details/transaction-details.component.html
@@ -31,7 +31,7 @@
       <p>{{ transaction.paymentRequisitionDate | date }}</p>
 
       <h3>Amount to be paid</h3>
-      <p>Ugx.{{ transaction.amountToBePaid }}</p>
+      <p>Ugx.{{ transaction.amountToBePaid | currency: "UGX ":"code" }}</p>
     </div>
   </div>
 
