Feat: Admin contact form

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -2,7 +2,7 @@
   <a routerLink="/">TRACK SOL</a>
 
   <ul>
-    <li><a routerLink="/">Contact Admin</a></li>
+    <li><a routerLink="/contact">Contact Admin</a></li>
     <li *ngIf="user"><a routerLink="/" (click)="onLogout()">Logout</a>
     </li>
   </ul>
