--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -26,7 +26,7 @@
       Select User's Role
       <select ngModel #role="ngModel" name="role" required>
         <option>admin</option>
-        <option>user</option>
+        <option value="user">supply chain</option>
         <option>accounts</option>
         <option>finance</option>
         <option>manager</option>
