Fix: sumbit messages

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -20,7 +20,7 @@
       />
     </label>
 
-    <button *ngIf="!loading" [disabled]="form.invalid">Send Message</button>
+    <button *ngIf="!loading" [disabled]="form.invalid">Login</button>
 
     <app-loading *ngIf="loading"></app-loading>
   </form>
