--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -18,7 +18,7 @@
       </textarea>
     </label>
 
-    <button *ngIf="!loading" [disabled]="form.invalid">Login</button>
+    <button *ngIf="!loading" [disabled]="form.invalid">Send Message</button>
 
     <app-loading *ngIf="loading"></app-loading>
   </form>
