Feat: Page not found interface

--- a/src/app/dashboard/comments/comments.component.html
+++ b/src/app/dashboard/comments/comments.component.html
@@ -24,11 +24,11 @@
         placeholder="Leave a comment . . ."
       ></textarea>
       <button class="submit right" *ngIf="!loading" [disabled]="form.invalid">
-        Comment and Accept
+        Approve
       </button>
 
       <button class="submit left" *ngIf="!loading" [disabled]="form.invalid">
-        Comment and Reject
+        Reject
       </button>
     </form>
   </div>
