--- a/src/app/dashboard/newpayload/newpayload.component.html
+++ b/src/app/dashboard/newpayload/newpayload.component.html
@@ -42,7 +42,7 @@ Item Three
     <label for="purchaseOrderNumber">
       Purchase Order Number
       <input
-        type="number"
+        type="text"
         ngModel
         #purchaseOrderNumber="ngModel"
         required
