--- a/src/app/dashboard/user/user.component.html
+++ b/src/app/dashboard/user/user.component.html
@@ -5,9 +5,10 @@
     <a routerLink="/new">Add new payload</a>
   </div>
   <ul class="tabs head">
-    <li class="active">Drafts</li>
-    <li>Submitted</li>
-    <li>Rejected</li>
+    <li>Drafts</li>
+    <li class="active">Submitted</li>
+    <li>Rejections from Finance</li>
+    <li>Approved</li>
   </ul>
 
   <app-loading *ngIf="loading"></app-loading>
