--- a/src/app/dashboard/manager/manager.component.scss
+++ b/src/app/dashboard/manager/manager.component.scss
@@ -13,8 +13,8 @@
     background-color: #9ff5b9;
     li {
       cursor: pointer;
-      &.active {
-        border-bottom: 1px solid #000;
+      a {
+        padding: 3px 15px;
       }
     }
   }
