--- a/src/app/dashboard/accounts/accounts.component.scss
+++ b/src/app/dashboard/accounts/accounts.component.scss
@@ -13,8 +13,8 @@
     background-color: #f5d39f;
     li {
       cursor: pointer;
-      &.active {
-        border-bottom: 1px solid #000;
+      a {
+        padding: 3px 15px;
       }
     }
   }
