--- a/src/app/dashboard/user/user.component.html
+++ b/src/app/dashboard/user/user.component.html
@@ -5,10 +5,18 @@
     <a routerLink="/new">Add new payload</a>
   </div>
   <ul class="tabs head">
-    <li>Drafts</li>
-    <li class="active">Submitted</li>
-    <li>Rejections from Finance</li>
-    <li>Approved</li>
+    <li (click)="onTab('all')">
+      <a [ngClass]="{ active: tab === 'all' }">All</a>
+    </li>
+    <li (click)="onTab('submitted')">
+      <a [ngClass]="{ active: tab === 'submitted' }">Submitted</a>
+    </li>
+    <li (click)="onTab('rejected')">
+      <a [ngClass]="{ active: tab === 'rejected' }">Rejections from Finance</a>
+    </li>
+    <li (click)="onTab('approved')">
+      <a [ngClass]="{ active: tab === 'approved' }">Approved</a>
+    </li>
   </ul>
 
   <app-loading *ngIf="loading"></app-loading>
