--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,9 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+
+.active {
+  color: #000;
+  border-bottom: 3px solid #000;
+  font-weight: 500;
+}
