--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,8 +1,12 @@
 .footer {
-  display: flex;
-  flex-flow: row;
-  border: 1px solid #000;
-  justify-content: space-around;
+  background-color: grey;
   color: #fff;
-  background-color: #000;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+
+  p {
+    float: right;
+    padding: 0 40px;
+  }
 }
