--- a/src/app/dashboard/finance/finance.component.scss
+++ b/src/app/dashboard/finance/finance.component.scss
@@ -11,7 +11,7 @@
   }
 
   .head {
-    background-color: #f5d39f;
+    background-color: #e5f59f;
     li {
       cursor: pointer;
       a {
@@ -22,7 +22,7 @@
 
   .greeting {
     text-align: center;
-    background-color: #f5d39f;
+    background-color: #e5f59f;
     color: #000;
     padding: 40px 0;
 
