--- a/src/app/dashboard/accounts/accounts.component.html
+++ b/src/app/dashboard/accounts/accounts.component.html
@@ -46,7 +46,9 @@
           <span class="flag-icon flag-icon-gb"></span>
           {{ transaction.deliveryDate | date }}
         </div>
-        <div class="flex-row" role="cell">{{ transaction._id }}</div>
+        <div class="flex-row" role="cell">
+          {{ transaction.id || transaction._id }}
+        </div>
         <div class="flex-row" role="cell">
           {{ transaction.paymentVoucherNumber }}
         </div>
