Fix: change to newpayload interface

--- a/src/app/dashboard/accounts/accounts.component.html
+++ b/src/app/dashboard/accounts/accounts.component.html
@@ -17,7 +17,7 @@
       <a [ngClass]="{ active: tab === 'rejected' }">Rejected</a>
     </li>
     <li (click)="onTab('approved')">
-      <a [ngClass]="{ active: tab === 'approved' }">Approved</a>
+      <a [ngClass]="{ active: tab === 'approved' }">Approved for Payment</a>
     </li>
   </ul>
 
