--- a/src/app/dashboard/newpayload/newpayload.component.scss
+++ b/src/app/dashboard/newpayload/newpayload.component.scss
@@ -39,6 +39,12 @@
     flex-flow: column;
   }
 
+  select{
+    height: 35px;
+    font-size: 18px;
+    margin-top: 5px; 
+  }
+
   input {
     height: 30px;
   }
