--- a/src/app/dashboard/comments/comments.component.html
+++ b/src/app/dashboard/comments/comments.component.html
@@ -4,7 +4,7 @@
     <div class="dp"></div>
     <div class="message">
       <h4>
-        {{ comment.user.firstname }} {{ comment.user.lastname }} |
+        {{ comment.user.firstname }} {{ comment.user.lastname }} on <span> - {{comment?.createdAt | date}}</span>
         {{ comment.user.role }}
       </h4>
       <div>
