--- a/src/app/dashboard/transaction-details/transaction-details.component.html
+++ b/src/app/dashboard/transaction-details/transaction-details.component.html
@@ -3,15 +3,14 @@
 
   <app-loading *ngIf="loading"></app-loading>
 
+  <h3>Date Submitted: {{ transaction?.paymentRequisitionDate | date }}</h3>
   <div *ngIf="!loading && !error" class="info">
     <div>
       <h3>Delivery Date</h3>
       <p>{{ transaction.deliveryDate | date }}</p>
 
       <h3>Payload Items</h3>
-      <ul>
-        <li *ngFor="let item of transaction.payload">{{ item }}</li>
-      </ul>
+      <p>{{ transaction.payload }}</p>
 
       <h3>Payment Voucher Number</h3>
       <p>{{ transaction.paymentVoucherNumber }}</p>
@@ -27,9 +26,6 @@
       <h3>Activity Line</h3>
       <p>{{ transaction.activityLine }}</p>
 
-      <h3>Payment Requisition Date</h3>
-      <p>{{ transaction.paymentRequisitionDate | date }}</p>
-
       <h3>Amount to be paid</h3>
       <p>{{ transaction.amountToBePaid | currency: "UGX ":"code" }}</p>
     </div>
@@ -37,7 +33,7 @@
 
   <app-comments
     [comments]="transaction?.comments"
-    [step]="transaction.step"
+    [step]="transaction?.step"
   ></app-comments>
 
   <div *ngIf="error">
