--- a/src/app/dashboard/manager/manager.component.html
+++ b/src/app/dashboard/manager/manager.component.html
@@ -6,6 +6,7 @@
       forwarded from Finance as of
       {{ currentdate | date }}
     </p>
+    <button (click)="onGenerateReport()">Generate Report</button>
   </div>
   <ul class="tabs head">
     <li (click)="onTab('all')">
