--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,7 +5,7 @@
 
   <form class="form" (ngSubmit)="onSubmit(form)" #form="ngForm">
     <label for="name">
-      Enter your name
+      Enter your Email Address
       <input type="text" ngModel name="name" #name="ngModel" required />
     </label>
 
