--- a/src/app/dashboard/comments/comments.component.html
+++ b/src/app/dashboard/comments/comments.component.html
@@ -4,8 +4,8 @@
     <div class="dp"></div>
     <div class="message">
       <h4>
-        {{ comment.user.firstname }} {{ comment.user.lastname }} on <span> - {{comment?.createdAt | date}}</span>
-        {{ comment.user.role }}
+        {{ comment.user.firstname }} {{ comment.user.lastname }} |
+        <span class="role">{{ comment.user.role }}</span> <span> - {{comment?.createdAt | date}}</span>
       </h4>
       <div>
         {{ comment.message }}
