--- a/src/app/dashboard/transaction-details/transaction-details.component.html
+++ b/src/app/dashboard/transaction-details/transaction-details.component.html
@@ -3,7 +3,7 @@
 
   <app-loading *ngIf="loading"></app-loading>
 
-  <h3>Date Submitted: {{ transaction?.paymentRequisitionDate | date }}</h3>
+  <h3 *ngIf="!loading && !error">Date Submitted: {{ transaction?.paymentRequisitionDate | date }}</h3>
   <div *ngIf="!loading && !error" class="info">
     <div>
       <h3>Delivery Date</h3>
@@ -31,7 +31,10 @@
     </div>
   </div>
 
-  <app-comments
+  <button *ngIf="!loading && !error && canEdit " (click)="onEdit()"
+    type="button" name="button">Edit Payload</button>
+
+  <app-comments *ngIf="!loading && !error"
     [comments]="transaction?.comments"
     [step]="transaction?.step"
   ></app-comments>
