--- a/src/app/dashboard/transaction-details/transaction-details.component.scss
+++ b/src/app/dashboard/transaction-details/transaction-details.component.scss
@@ -24,3 +24,17 @@
     border-radius: 5px;
   }
 }
+
+button{
+  color:#fff;
+  background: #1976d2;
+  border:none;
+  padding: 4px 14px;
+  margin-top: 20px;
+  font-size: 16px;
+  cursor: pointer;
+
+  &:hover{
+    background: #197609;
+  }
+}
