--- a/src/app/dashboard/comments/comments.component.html
+++ b/src/app/dashboard/comments/comments.component.html
@@ -5,7 +5,12 @@
     <div class="message">
       <h4>
         {{ comment.user.firstname }} {{ comment.user.lastname }} |
-        <span class="role">{{ comment.user.role }}</span> <span> - {{comment?.createdAt | date}}</span>
+        <span class="role"
+          >{{
+            comment.user.role === "user" ? "Supply Chain" : comment.user.role
+          }}
+        </span>
+        <span> - {{ comment?.createdAt | date }}</span>
       </h4>
       <div>
         {{ comment.message }}
