--- a/src/app/dashboard/transaction-details/transaction-details.component.html
+++ b/src/app/dashboard/transaction-details/transaction-details.component.html
@@ -3,7 +3,9 @@
 
   <app-loading *ngIf="loading"></app-loading>
 
-  <h3 *ngIf="!loading && !error">Date Submitted: {{ transaction?.paymentRequisitionDate | date }}</h3>
+  <h3 *ngIf="!loading && !error">
+    Date Submitted: {{ transaction?.paymentRequisitionDate | date }}
+  </h3>
   <div *ngIf="!loading && !error" class="info">
     <div>
       <h3>Delivery Date</h3>
@@ -14,6 +16,12 @@
 
       <h3>Payment Voucher Number</h3>
       <p>{{ transaction.paymentVoucherNumber }}</p>
+
+      <h3>Invoice Amount</h3>
+      <p>{{ transaction.invoiceAmount | currency: "UGX ":"code" }}</p>
+
+      <h3>Withholding Tax</h3>
+      <p>{{ transaction.withholdingTax }}%</p>
     </div>
 
     <div>
@@ -31,10 +39,21 @@
     </div>
   </div>
 
-  <button *ngIf="!loading && !error && canEdit " (click)="onEdit()"
-    type="button" name="button">Edit Payload</button>
+  <h3 style="float: right;" class="timeElapsed" *ngIf="!loading && !error">
+    Time Elapsed:<span> {{ timeElapsed }}</span>
+  </h3>
 
-  <app-comments *ngIf="!loading && !error"
+  <button
+    *ngIf="!loading && !error && canEdit"
+    (click)="onEdit()"
+    type="button"
+    name="button"
+  >
+    Edit Payload
+  </button>
+
+  <app-comments
+    *ngIf="!loading && !error"
     [comments]="transaction?.comments"
     [step]="transaction?.step"
   ></app-comments>
