--- a/src/app/dashboard/transaction-details/transaction-details.component.scss
+++ b/src/app/dashboard/transaction-details/transaction-details.component.scss
@@ -23,18 +23,24 @@
     box-shadow: 0 0 2px grey;
     border-radius: 5px;
   }
+
+  .timeElapsed {
+    span {
+      font-size: 15px;
+    }
+  }
 }
 
-button{
-  color:#fff;
+button {
+  color: #fff;
   background: #1976d2;
-  border:none;
+  border: none;
   padding: 4px 14px;
   margin-top: 20px;
   font-size: 16px;
   cursor: pointer;
 
-  &:hover{
+  &:hover {
     background: #197609;
   }
 }
