Feat: Search by tracking number

--- a/src/app/dashboard/accounts/accounts.component.html
+++ b/src/app/dashboard/accounts/accounts.component.html
@@ -21,6 +21,11 @@
     </li>
   </ul>
 
+  <form class="inline-form">
+    <input type="search" placeholder="Tracking number" (input)="onSearch()" />
+    <button type="submit">Search</button>
+  </form>
+
   <app-loading *ngIf="loading"></app-loading>
   <div *ngIf="!loading" class="transactions">
     <div *ngIf="empty" class="empty">
@@ -29,7 +34,7 @@
     </div>
 
     <div class="table-container" role="table" aria-label="Transactions">
-      <div class="flex-table header" role="rowgroup">
+      <div class="table header" role="rowgroup">
         <div class="flex-row first" role="columnheader">Delivery Date</div>
         <div class="flex-row" role="columnheader">Tracking Number</div>
         <div class="flex-row" role="columnheader">Voucher Number</div>
@@ -38,7 +43,7 @@
       </div>
       <div
         *ngFor="let transaction of transactions"
-        class="flex-table row"
+        class="table body"
         role="rowgroup"
         (click)="onSelect(transaction._id)"
       >
