--- a/src/app/dashboard/user/user.component.html
+++ b/src/app/dashboard/user/user.component.html
@@ -2,6 +2,7 @@
   <div class="greeting">
     <h1>Hi, {{ user.firstname }}</h1>
     <p>This is your account summary as of {{ currentdate | date }}</p>
+
     <a routerLink="/new">Add new payload</a>
   </div>
   <ul class="tabs head">
@@ -19,6 +20,11 @@
     </li>
   </ul>
 
+  <form class="inline-form">
+    <input type="search" placeholder="Tracking number" (input)="onSearch()" />
+    <button type="submit">Search</button>
+  </form>
+
   <app-loading *ngIf="loading"></app-loading>
   <div *ngIf="!loading" class="transactions">
     <div *ngIf="empty" class="empty">
@@ -27,7 +33,7 @@
     </div>
 
     <div class="table-container" role="table" aria-label="Transactions">
-      <div class="flex-table header" role="rowgroup">
+      <div class="table header" role="rowgroup">
         <div class="flex-row first" role="columnheader">Delivery Date</div>
         <div class="flex-row" role="columnheader">Tracking Number</div>
         <div class="flex-row" role="columnheader">Voucher Number</div>
@@ -36,7 +42,7 @@
       </div>
       <div
         *ngFor="let transaction of transactions"
-        class="flex-table row"
+        class="table body"
         role="rowgroup"
         (click)="onSelect(transaction._id)"
       >
