--- a/src/styles.scss
+++ b/src/styles.scss
@@ -74,9 +74,10 @@ body {
 }
 
 .red {
-  background-color: rgba(255, 0, 0, 0.199);
+  // border: 1px solid rgba(255, 0, 0, 0.5);
+  color: rgba(255, 0, 0, 1);
 }
 
 .green {
-  background-color: green;
+  color: green;
 }
