--- a/src/styles.scss
+++ b/src/styles.scss
@@ -81,3 +81,6 @@ body {
 .green {
   color: green;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
