--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,24 +1,61 @@
 <section class="contact-form">
-  <h1>Contact Admin</h1>
+  <h1>Submit your message</h1>
+
+  <mat-divider></mat-divider>
+
   <form class="form" (ngSubmit)="onSubmit(form)" #form="ngForm">
-    <label for="name">
-      Full Name
-      <input type="text" ngModel #name="ngModel" name="name" required />
-    </label>
+    <mat-form-field appearance="fill">
+      <mat-label>
+        Full Name
+      </mat-label>
+      <input
+        matInput
+        type="text"
+        ngModel
+        #name="ngModel"
+        name="name"
+        required
+      />
+    </mat-form-field>
 
-    <label for="email">
-      Email Address
-      <input type="email" ngModel #email="ngModel" name="email" required />
-    </label>
+    <mat-form-field appearance="fill">
+      <mat-label>
+        Email Address
+      </mat-label>
+      <input
+        matInput
+        type="email"
+        ngModel
+        #email="ngModel"
+        name="email"
+        required
+      />
+    </mat-form-field>
 
-    <label for="full name">
-      Message
-      <textarea ngModel #message="ngModel" name="message" placeholder="Your Message" rows="7" required>
-
+    <mat-form-field appearance="fill">
+      <mat-label>
+        Message
+      </mat-label>
+      <textarea
+        matInput
+        ngModel
+        #message="ngModel"
+        name="message"
+        placeholder="Your Message"
+        rows="7"
+        required
+      >
       </textarea>
-    </label>
+    </mat-form-field>
 
-    <button *ngIf="!loading" [disabled]="form.invalid">Send Message</button>
+    <button
+      mat-raised-button
+      color="warn"
+      *ngIf="!loading"
+      [disabled]="form.invalid"
+    >
+      Send Message
+    </button>
 
     <app-loading *ngIf="loading"></app-loading>
   </form>
