--- a/src/app/dashboard/comments/comments.component.html
+++ b/src/app/dashboard/comments/comments.component.html
@@ -1,7 +1,7 @@
 <div class="comments">
   <h2>Comments</h2>
   <div *ngFor="let comment of comments" class="comment">
-    <div class="dp"></div>
+    <mat-icon>account_circle</mat-icon>
     <div class="message">
       <h4>
         {{ comment.user.firstname }} {{ comment.user.lastname }} |
