--- a/src/app/dashboard/comments/comments.component.scss
+++ b/src/app/dashboard/comments/comments.component.scss
@@ -40,31 +40,25 @@
   }
 
   .comment {
+    padding: 20px 40px;
     display: flex;
     flex-flow: row;
     margin-bottom: 10px;
     padding-bottom: 10px;
     border-bottom: 1px solid rgb(206, 200, 200);
-    align-items: center;
+    align-items: start;
 
-    .dp {
-      background-color: #323233;
-      align-self: center;
-      width: 50px;
-      height: 50px;
-      margin: 0 20px;
-      border-radius: 50%;
+    mat-icon {
+      margin-right: 5px;
     }
 
     .message {
-
-      h4{
-
-        .role{
+      h4 {
+        .role {
           font-weight: 500;
           font-size: 16px;
         }
-        span{
+        span {
           font-weight: 400;
           font-size: 14px;
         }
