--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,27 +1,42 @@
 <section class="login-form">
-  <h1>Login Here</h1>
+  <h1>TRACK-SOL: Login Here</h1>
+  <mat-divider></mat-divider>
   <p>Please Fill in your details to access the platform</p>
   <p class="error">{{ error }}</p>
 
   <form class="form" (ngSubmit)="onSubmit(form)" #form="ngForm">
-    <label for="name">
-      Enter your Email Address
-      <input type="text" ngModel name="name" #name="ngModel" required />
-    </label>
-
-    <label for="password">
-      Enter your password
+    <mat-form-field appearance="fill">
+      <mat-label>Email Address</mat-label>
       <input
+        matInput
+        type="email"
+        ngModel
+        name="name"
+        #name="ngModel"
+        required
+      />
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+      <mat-label>Password</mat-label>
+      <input
+        matInput
         type="password"
         ngModel
         name="password"
         #password="ngModel"
         required
       />
-    </label>
-
-    <button *ngIf="!loading" [disabled]="form.invalid">Login</button>
+    </mat-form-field>
 
     <app-loading *ngIf="loading"></app-loading>
+    <button
+      mat-raised-button
+      color="warn"
+      *ngIf="!loading"
+      [disabled]="form.invalid"
+    >
+      Login
+    </button>
   </form>
 </section>
