--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,92 +1,40 @@
 .login-form {
+  margin: 70px 200px;
+  border: 1px solid #ccc;
+  padding: 50px 20px;
+  border-radius: 5px;
+  background-color: #fff;
   h1 {
-    font-weight: 100;
-    font-size: 50px;
-    margin-top: 20px;
+    font-size: 40px;
+    font-weight: 200;
+    margin-bottom: 15px;
   }
 
   p {
-    text-align: center;
-    margin-top: 20px;
+    margin-bottom: 20px;
   }
 
-  .error {
+  mat-divider {
     color: red;
+    background-color: red;
+    width: 20%;
+    margin-bottom: 10px;
   }
 
-  input {
-    margin-top: 10px;
-  }
-}
-
-.login-form {
-  width: 50vw;
-  margin: 0 auto;
-  height: 400px;
-
-  h1 {
-    font-size: 40px;
-    text-align: center;
-  }
-}
-
-.form {
-  display: flex;
-  flex-flow: column;
-  justify-content: space-evenly;
-  height: 100%;
-  width: 100%;
-
-  label {
+  form {
     display: flex;
     flex-flow: column;
-  }
 
-  input,
-  textarea {
-    height: 30px;
-    font-size: 16px;
-    padding: 2px 10px;
-    // border-radius: 3px;
-    // box-shadow: none;
-    // outline: none;
-    // border: 1px solid #707070;
-
-    &.ng-invalid {
-      &.ng-touched {
-        border: 1px solid red;
-      }
+    mat-form-field {
+      margin-bottom: 50px;
     }
-  }
 
-  label {
-    color: #000;
-    text-transform: uppercase;
-    font-size: 12px;
-    font-weight: 500;
-    letter-spacing: 2px;
-
-    small {
-      color: red;
-      text-transform: none;
-      letter-spacing: normal;
-      font-size: 12px;
-      align-self: flex-end;
+    input {
+      font-size: 16px;
     }
-  }
 
-  button {
-    background-color: #003561;
-    color: #fff;
-    border: none;
-    height: 32px;
-    font-size: 18px;
-    font-weight: 400;
-    cursor: pointer;
-
-    &[disabled] {
-      opacity: 0.6;
-      cursor: not-allowed;
+    button {
+      font-size: 18px;
     }
   }
 }
