--- a/src/styles.scss
+++ b/src/styles.scss
@@ -85,4 +85,6 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
   font-size: 16px;
+  background: url(./assets/ab.jpg);
+  background-size: cover;
 }
